# Memory System Portability & Backup/Restore — Walkthrough
## 1. Overview
The platform now includes end-to-end support for **Memory Portability**, allowing all memory tiers (`short-term`, `working`, `episodic`, and `long-term` vector memory) to be **exported**, **imported (restored)**, and **backed up** to disk or remote destinations across instances and agents.

---

## 2. Core Architecture & Data Model

```
┌──────────────────────────────────────────────────────────────┐
│ Memory Tiers (Short-Term, Working, Episodic, Long-Term)      │
└──────────────────────────────┬───────────────────────────────┘
                               │ exportAll() / importAll()
                               ▼
┌──────────────────────────────────────────────────────────────┐
│ MemoryExportService                                          │
│ - Aggregates all registered MemoryProvider instances         │
│ - Serializes to/from portable MemorySnapshot JSON             │
│ - Handles on-disk backup & conflict resolution (overwrite)   │
└──────────────────────────────┬───────────────────────────────┘
                               │
               ┌───────────────┴───────────────┐
               ▼                               ▼
┌──────────────────────────────┐ ┌──────────────────────────────┐
│ REST API                     │ │ gRPC Service                 │
│ /api/v1/memory/*             │ │ MemoryService                │
└──────────────────────────────┘ └──────────────────────────────┘
```

### 1. Portable Memory Snapshot (`MemorySnapshot`)
Located in [`wayang-memory`](file:///Users/bhangun/Workspace/workkayys/Products/Wayang/wayang-platform/Families/wayang/framework/wayang-memory/src/main/java/tech/kayys/wayang/memory/MemorySnapshot.java):
- Versioned interchange schema (`schemaVersion: 1`)
- Self-contained metadata (`snapshotId`, `agentId`, `userId`, `tenantId`, `capturedAt`, `tiers`)
- Contains complete [`MemoryRecord`](file:///Users/bhangun/Workspace/workkayys/Products/Wayang/wayang-pla